--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -qr requirements.txt --use-wheel
 
 script:
-  - py.test --pep8 --cov wiki
+  - py.test --cov wiki
 
 after_success:
   - coveralls
